Revert: change domain back to cra-assess.complira.co

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content="EU Cyber Resilience Act Readiness Assessment | Complira" />
   <meta property="og:description" content="Free EU Cyber Resilience Act gap analysis. Sector-specific guidance for healthcare, IoT, industrial, automotive, and financial products. Every question mapped to specific CRA articles and Annex I clauses." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cyberassure.complira.co" />
-  <meta property="og:image" content="https://cyberassure.complira.co/og-image.png" />
+  <meta property="og:url" content="https://assess.complira.co" />
+  <meta property="og:image" content="https://assess.complira.co/og-image.png" />
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
